--- a/Clang/composer.json
+++ b/Clang/composer.json
@@ -4,8 +4,8 @@
     "license": "proprietary",
     "authors": [
         {
-            "name": "Mage2Gen",
-            "email": "info@mage2gen.com"
+            "name": "e-Village BV",
+            "email": "info@e-village.nl"
         }
     ],
     "minimum-stability": "dev",
