--- a/Clang/composer.json
+++ b/Clang/composer.json
@@ -2,7 +2,7 @@
     "name": "clang/module-clang",
     "description": "A module to integrate Magento with Clang e-mailmarketing software",
     "version": "1.0.1",
-    "license": "proprietary",
+    "license": "MIT",
     "authors": [
         {
             "name": "e-Village BV",
