--- a/Clang/composer.json
+++ b/Clang/composer.json
@@ -11,7 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "magento/framework": "~100.0.17 || ~100.1.0 || ~100.2.0"
+        "magento/framework": "~100.0.17 || ~100.1.0"
     },
     "autoload": {
         "psr-4": {
