Require php7 or newer

--- a/Clang/composer.json
+++ b/Clang/composer.json
@@ -11,6 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
+        "php": "^7.0.0",
         "magento/framework": ">=100.0.17"
     },
     "autoload": {
