Updated composer to use the magento-composer-installer, added gitignore, updated releasenotes and also added 1.0.7 and 1.0.8 dist files

--- a/Clang/composer.json
+++ b/Clang/composer.json
@@ -11,8 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.0.0",
-        "magento/framework": ">=100.0.17"
+        "magento/magento-composer-installer": "^0.1.13"
     },
     "autoload": {
         "psr-4": {
