--- a/Clang/composer.json
+++ b/Clang/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "clang/module-clang",
     "description": "A module to integrate Magento with Clang e-mailmarketing software",
-    "version": "1.0.6",
+    "version": "1.0.8",
     "license": "MIT",
     "authors": [
         {
@@ -11,7 +11,8 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "magento/magento-composer-installer": "^0.1.13"
+        "php": ">=7.0.0",
+        "magento/framework": ">=100.0.17"
     },
     "autoload": {
         "psr-4": {
