--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "clang/module-clang",
-    "description": "A module to integrate Magento with Clang e-mailmarketing software",
+    "description": "A module to integrate Magento with CanopyDeploy e-mailmarketing software",
     "version": "1.0.11",
     "license": "MIT",
     "authors": [
